k8s/api-gateway.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: vanshpal27/connect-api-gateway:0.0.1-SNAPSHOT
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        readinessProbe:
          httpGet:
           path: /actuator/health
           port: 9090
          initialDelaySeconds: 90
          periodSeconds: 20
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - port: 9090
    targetPort: 9090
