k8s/connections-service.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connections-service
spec:
  selector:
    matchLabels:
      app: connections-service
  template:
    metadata:
      labels:
        app: connections-service
    spec:
      containers:
      - name: connections-service
        image:  vanshpal27/connect-connections-service:0.0.1-SNAPSHOT
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 9030
---
apiVersion: v1
kind: Service
metadata:
  name: connections-service
spec:
  selector:
    app: connections-service
  ports:
  - port: 9030
    targetPort: 9030
