k8s/notification-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notification-db
spec:
  selector:
    matchLabels:
      app: notification-db
  serviceName: notification-db
  replicas: 1
  template:
    metadata:
      labels:
        app: notification-db
    spec:
      containers:
      - name: notification-db
        image: postgres:16
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: notification-db
spec:
  clusterIP: None
  selector:
    app: notification-db
  ports:
  - port: 5432
    targetPort: 5432
