k8s/notifications-service.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
      - name: notifications-service
        image: vanshpal27/connect-notifications-service:0.0.1-SNAPSHOT
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 1111
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
spec:
  selector:
    app: notifications-service
  ports:
  - port: 1111
    targetPort: 1111
