k8s/posts-service.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
spec:
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
      - name: post-service
        image: vanshpal27/connect-posts-service
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-service
  ports:
  - port: 8082
    targetPort: 8082
