k8s/users-service.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
      - name: users-service
        image: vanshpal27/connect-users-service:0.0.1-SNAPSHOT
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-service
  ports:
  - port: 8081
    targetPort: 8081
