k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
   name: myingress
  annotations:
   kubernetes.io/ingress.class: "gce"
   kubernetes.io/ingress.allow-http: "true"

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway
            port: 
              number: 9090
      - pathType: Prefix
        path: "/kafka-ui"
        backend:
          service:
            name: kafka-ui-service
            port: 
              number: 8080
